FIX-5 :recycle: : 문자열 상수로 변환, 사용하지 않는 클래스 제거